[metadata]
name = metrology
version = 1.3.0
summary = A library to easily measure what\'s going on in your python.
description-file = README.rst
author = Timothée Peignier'
author_email = timothee.peignier@tryphon.org
home-page = https://github.com/cyberdelia/metrology
license = MIT License

classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Utilities

[wheel]
universal = 1
